--- a/4-varibles-relaxation.ipynb
+++ b/4-varibles-relaxation.ipynb
@@ -191,7 +191,9 @@
     "    E = np.reshape(E,(ne,mesh),order='F')\n",
     "    # Here, I introduced the adaptive definition of scalv.\n",
     "    # The typical scale of each component of y is defined\n",
-    "    # as their maximum value in the previous iteration.\n",
+    "    # as their mean absolute value in the previous iteration.\n",
+    "    # To avoid the division by zero, the initial value of scalv\n",
+    "    # is the lower bound of scalv.\n",
     "    if scale_adaptive:\n",
     "        scalv = np.maximum(scalv, np.abs(y).mean(axis=1))\n",
     "    else:\n",
